src/sections/card-game/components/card-layouts/full-card/full-card.css
:root {
    --system-color-canvas: oklch(0% 0 0 / 90%);
    --system-color-shadow: oklch(0% 0 0 / 38.5%);
    --system-color-dark: oklch(0% 0 0);
    --system-color-light: oklch(100% 0 0);
    --system-color-label: oklch(67.03% 0.023 79.03);
    --system-color-logo: oklch(57.75% 0.149 25.33);
    --system-color-card-border: oklch(0% 0 0 / 10%);
    --system-color-card-shadow: oklch(0% 0 0 / 50%);
    --system-color-text-shadow: oklch(0% 0 0 / 20%);
    --system-color-card-polyphemus: oklch(39.58% 0.013 81.76);
    --system-color-card-andromeda: oklch(39.22% 0.016 214.52);
    --system-color-card-cerberus: oklch(23.19% 0.036 48.15);
    --system-color-card-nyx: oklch(35.95% 0.024 18.46);
    --system-color-card-horse: oklch(35.25% 0.027 142.94);
    --system-color-gem-orange: oklch(71.92% 0.056 38.8 / 20%);
    --system-color-gem-blue: oklch(78.19% 0.06 187.95 / 20%);
    --system-color-gem-red: oklch(69.69% 0.072 6.59 / 20%);
    --system-color-gem-purple: oklch(71.26% 0.104 327.17 / 20%);
    --system-color-gem-green: oklch(72.3% 0.162 149.93 / 20%);
}

.card-container {
    width: 400px;
    height: 550px;
    display: grid;
    margin: 10px 10px 50px 10px;
}

.card-front,
.card-back {
    grid-area: 1 / 1;
    /* This stacks them on top of each other */
    backface-visibility: hidden;
    width: 100%;
    height: 100%;
    border: 1px solid #000;
    border-radius: 10px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
    font-family: Arial, sans-serif;
    font-size: 18px;
    transition: 1s;
}

.card-front {
    background-color: oklch(39.22% 0.016 214.52);
}

.card-back {
    transform: rotateY(180deg);
    cursor: pointer;
}

.card-back-image {
    width: 100%;
    height: 100%;
    border-radius: 10px;
}

.card-header {
    padding-top: 5px;
    width: 100%;
    height: 25px;
    display: flex;
}

.card-elements {
    width: 100%;
    height: 25px;
    display: flex;
    justify-content: flex-end;
    padding-right: 23px;
}

.card-type {
    margin-left: 20px;
    color: rgb(220, 220, 220)
}

.card-elements-icon {
    margin-left: 1px;
    width: 18px;
    height: 18px;
    border-radius: 25px;
}

.card-elements-icon-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.card-image-container {
    margin-left: 20px;
    width: 360px;
    height: 250px;
}

.card-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px 10px 0px 0px;
}

.card-name {
    width: 100%;
    height: 40px;
    margin-top: -40px;
    position: relative;
    border: 1px solid rgb(0, 0, 0);
    font: normal 32px/40px 'Rye';
    font-weight: 500;
    text-align: center;
    color: rgb(0, 0, 0);
    background: rgb(192, 191, 191);
    border-radius: 2px;
    box-shadow: 0 0 30px rgba(0, 0, 0, .15) inset,
        0 6px 10px rgba(0, 0, 0, .15);
}


.card-info-container {
    background: oklch(67.03% 0.023 79.03);
    text-align: left;
    padding: 10px;
    margin-left: 20px;
    width: 340px;
    height: 265px;
    border-radius: 0px 0px 10px 10px;
    font-size: 13px;
    overflow-y: auto;
}

.card-description {
    font-style: italic;
}

.card-info-title {
    font-weight: bold;
    /* font-size: 18px; */
    color: rgb(52, 44, 44);
    margin-top: 10px;
    margin-bottom: 3px;
    /* border-bottom: 1px solid gray; */
    overflow-y: auto;
}

.card-passive-ability {
    display: flex;
    justify-content: space-between;
}

.card-action-ability {
    margin-bottom: 3px;
    background: oklch(71.851% 0.03365 78.039);
    border: 1px solid gray;
    padding: 1px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;

    display: flex;
    justify-content: space-between;
}

.card-action-ability:hover {
    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
    transform: translateY(-3px);
    cursor: pointer;
}

.ability-first-row {
    display: flex;
    flex-direction: row;
}

.ability-name {
    font-weight: bold;
}

.ability-effect {
    margin-left: 10px;
}

.ability-description {
    font-style: italic;
}

.ability-card-right-side {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
}

.card-action {
    margin-bottom: 3px;
}




.card-footer {
    margin-left: 20px;
    width: 360px;
    height: 25px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    color: rgb(220, 220, 220)
}

.health-circle {
    margin-top: -30px;
    background-color: darkred;
    border-radius: 30px;
    width: 55px;
    height: 55px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.health-text {
    font-size: 14px
}

.rotate-90 {
    transform: rotate(90deg);
}

.rotateY-180 {
    transform: rotateY(180deg);
}

.rotateY-0 {
    transform: rotateY(0deg);
}

